# max-daisy

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
help/: dsp.blosc~.maxhelp  dsp.fm2~.maxhelp  dsp.id~.maxhelp  dsp.moog~.maxhelp  dsp.oscbank~.maxhelp  dsp.osc~.maxhelp  dsp.reverbsc~.maxhelp  dsp.strev~.maxhelp  dsp.vosim~.maxhelp  dsp.zosc~.maxhelp  sumratio.maxpat
source/projects/daisy_sp/: CMakeLists.txt  LICENSE
source/projects/daisy_sp/Synthesis/: oscillatorbank.h
source/projects/dsp.blosc~/: CMakeLists.txt  README.md  dsp_blosc~.cpp
source/projects/dsp.fm2~/: README.md  dsp_fm2~.cpp
source/projects/dsp.id~/: README.md  dsp_id~.cpp
source/projects/dsp.moog~/: README.md  dsp_moog~.cpp
source/projects/dsp.oscbank~/: dsp_oscbank~.cpp
source/projects/dsp.osc~/: README.md  dsp_osc~.cpp
source/projects/dsp.reverbsc~/: dsp_reverbsc~.cpp
source/projects/dsp.reverbsc~/archive/: dsp_reverbsc~.bak.cpp
source/projects/dsp.strev~/: dsp_strev~.cpp
source/projects/dsp.vosim~/: dsp_vosim~.cpp
source/projects/dsp.zosc~/: dsp_zosc~.cpp
